# dotfile

./: .gitattributes  .gitignore  404.html  Bakefile.sh  Cargo.toml  README.md  file.c  foxxo.toml  foxxy.toml  getting-started.html  guide.html  history.html  index.html  rustfmt.toml  search.html  sitemap.xml  tips.html
completion/: completion.bash
docs/: getting-started.md  guide.md  history.md  index.md  tips.md  troubleshooting.md
example/dotmgr/: bootstrap.sh
example/dotmgr/actions/: 11-dotmgr-say-woof.sh
example/dotmgr/hooks/: bootstrapAfter.sh
example/dotmgr/profiles/: 0-default.sh  1-desktop.sh
example/dotmgr/scripts/: 10-dotmgr-say-hello.sh  20-dotmgr-say-meow.sh
getting-started/: index.html
guide/: index.html
history/: index.html
scripts/: init.sh
search/: search_index.json
src/: cli.rs  config.rs  lib.rs  main.rs  tui.rs  util.rs
src/commands/: dotmgr-action-plumbing.sh  dotmgr-action.sh  dotmgr-bootstrap.sh  dotmgr-doctor.sh  dotmgr-run.sh  dotmgr-update.sh  internal.rs  mod.rs  reconcile.rs  script.rs
src/util/: dotmgr.sh  dotmgrUtil.sh  helper.sh  source.sh  tty.sh  util.sh
src/utils/: reconcile.rs
tests/: for_empty_target.rs
tips/: index.html
troubleshooting/: index.html
