[package]
name = "fox-dotfile"
description = "Dotfile manager"
license = "MPL-2.0"
repository = "https://github.com/fox-tools/dotfile"
version = "0.2.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "dotfile"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
colored = "2.0.0"
crossterm = "0.25.0"
dirs = "4.0.0"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
notify = { version = "5.0.0", features = ["serde"] }
tui = "0.19.0"
